--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     </ul>
 
     <script>
+        // create 3 variables to store 3 elements references.
+        const list = document.querySelector('ul');
+        const input = document.querySelector('input');
+        const button = document.querySelector('button');
 
+        // 
     </script>
   </body>
 </html>
