--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
         const list = document.querySelector('ul');
         const input = document.querySelector('input');
         const button = document.querySelector('button');
-
-        // 
+        
+        // addEventListener to the button with function
+        button.addEventListener('click', () => {
+            const myItem = input.value;
+            // console.log(myItem);
+            input.value = '';
+        })
     </script>
   </body>
 </html>
