added focus method for focus the input element

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             listBtn.addEventListener ('click', () => {
               list.removeChild(listItem);
             }); 
+
+            // added focus method for focus the input element
+            input.focus(); 
         });
     </script>
   </body>
