added width, height and border in the section

--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
     </style>
   </head>
   <body>
+    <section style="width: 400px; height: 700px; border: 1px solid gray;">
+      <h1>My shopping list</h1>
 
-    <h1>My shopping list</h1>
+      <div>
+        <label for="item">Enter a new item:</label>
+        <input type="text" name="item" id="item">
+        <button>Add item</button>
+      </div>
 
-    <div>
-      <label for="item">Enter a new item:</label>
-      <input type="text" name="item" id="item">
-      <button>Add item</button>
-    </div>
+      <ul>
 
-    <ul>
+      </ul>
+    </section>
 
-    </ul>
+    
 
     <script>
         // created 3 variables to store 3 elements (ul, input & button) references.
