added section margin 0 auto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <section style="width: 400px; height: 700px; border: 1px solid gray;">
+    <section style="width: 400px; height: 700px; border: 1px solid gray; margin: 0 auto;">
       <h1>My shopping list</h1>
 
       <div>
