added some style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <section style="width: 400px; height: 700px; border: 1px solid gray; margin: 0 auto;">
+    <section style="width: 400px; height: 700px; border: 1px solid gray; border-radius: 10px; margin: 0 auto; padding: 20px;">
       <h1>My shopping list</h1>
 
       <div>
@@ -30,8 +30,6 @@
 
       </ul>
     </section>
-
-    
 
     <script>
         // created 3 variables to store 3 elements (ul, input & button) references.
